# SU2OptimizationDemo

./: CMakeLists.txt  SU2Chain.cpp
naca0012/OPTIMIZATION_WITH_ADJOINTS/: NACA0012DragMinimization.cfg  calculateCD.py  preprocessTrainingData.py  runOptimization.py
naca0012/OPTIMIZATION_WITH_ADJOINTS/SimulationData/: naca0012.cfg  script.py
naca0012/OPTIMIZATION_WITH_ADJOINTS/TrainingData/: Area.csv  CD.csv  CL.csv
